--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
